# Astronomy_Project

./: .gitignore  Example Notebook.ipynb  Readme.md  configs.py  datasplit.ipynb  pyproject.toml  requirements.txt  setup.py
ChemSurrogate/: __init__.py  analysis.py
examples/: Random Testing.ipynb  main.py  test.csv  training.py
examples/ae+fcnn/: training.py
models/: autoencoder.pth  emulator.pth  emulator1.pth  latentODE.pth  training_information.txt
src/: analysis.py  configs.py  data_generation.py  data_processing.py  main.py  nn.py  train.py
src/ChemSurrogate/: analysis.py  configs.py  data_generation.py  data_processing.py  main.py  nn.py  train.py  trainer.py
src/ChemSurrogate.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
utils/: component_scalers.npy  conservation_matrix.npy  gas_species.txt  grain_species.txt  initial_abundances.npy  physical_parameters.txt  species.txt  stoichiometric_matrix.npy
