[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ChemSurrogate"]
package-dir = {"" = "src"}

[project]
name = "ChemSurrogate"
version = "0.1.0"
description = "A surrogate model for UCLChem."
readme = "README.md"
requires-python = ">=3.7"
dependencies = []